<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>se.uhr.sonar</groupId>
    <artifactId>sonar-pr-gerrit-plugin</artifactId>
    <version>2.0.0-SNAPSHOT</version>
    <packaging>sonar-plugin</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <mockito.version>5.20.0</mockito.version>
        <sonar-plugin-api.version>13.2.0.3137</sonar-plugin-api.version>
    </properties>

    <url>https://github.com/swedish-council-for-higher-education/sonar-pr-gerrit-plugin</url>

    <scm>
        <connection>scm:git:git@github.com:swedish-council-for-higher-education/sonar-pr-gerrit-plugin.git</connection>
        <url>https://github.com/swedish-council-for-higher-education/sonar-pr-gerrit-plugin</url>
        <developerConnection>scm:git:git@github.com:swedish-council-for-higher-education/sonar-pr-gerrit-plugin.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/swedish-council-for-higher-education/sonar-pr-gerrit-plugin</url>
        </repository>
    </distributionManagement>

    <dependencies>
        <dependency>
            <groupId>org.sonarsource.api.plugin</groupId>
            <artifactId>sonar-plugin-api</artifactId>
            <!-- minimal version of SonarQube to support. -->
            <version>${sonar-plugin-api.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- plugin dependencies (no transitive dependencies) -->

        <dependency>
            <groupId>com.urswolfer.gerrit.client.rest</groupId>
            <artifactId>gerrit-rest-java-client</artifactId>
            <version>0.9.7</version>
        </dependency>

        <dependency>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
            <version>1.3.5</version>
            <scope>provided</scope>
        </dependency>

        <!-- TEST -->

        <dependency>
            <groupId>org.sonarsource.api.plugin</groupId>
            <artifactId>sonar-plugin-api-test-fixtures</artifactId>
            <version>${sonar-plugin-api.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.27.6</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.13.4</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.sonarsource.sonar-packaging-maven-plugin</groupId>
                <artifactId>sonar-packaging-maven-plugin</artifactId>
                <version>1.23.0.740</version>
                <extensions>true</extensions>
                <configuration>
                    <pluginClass>se.uhr.sonar.gerrit.GerritPlugin</pluginClass>
                    <pluginDescription>Perform Gerrit votes depeding on Quality Gate status</pluginDescription>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
